# true-storage

./: .env  .gitignore  .readthedocs.yaml  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  update_version.py
docs/: index.md  styles.css  template.html
docs/source/: api.rst  api_reference.rst  changelog.rst  conf.py  examples.rst  index.rst  installation.rst  releases.rst  troubleshooting.rst
docs/source/_static/: dark.css
docs/source/_static/css/: custom.css
docs/source/_templates/: layout.html
docs/source/changelogs/: 0.1.0.rst
docs/source/examples/: index.rst
docs/source/examples/database/: index.rst
docs/source/modules/: database.rst  env.rst  index.rst  session.rst  storage.rst
docs/source/releases/: 0.1.0.rst
examples/: demo.py
requirements/: dev.txt  docs.txt
scripts/: changelog.py  fix_rst_titles.py  push-feature.sh  release.py  simple_changelog.py  simple_release.py  styles.py  update_version.py
tests/: __init__.py  test_database.py  test_env.py  test_session.py  test_storage.py
true_storage/: __init__.py  env.py  exceptions.py  session.py  store.py
true_storage/database/: __init__.py  filesystem.py  sqlite.py
true_storage/demos/all/: 01_basic.py
true_storage/demos/database/: 01_basic_sqlite.py  02_filesystem_store.py  README.md
true_storage/demos/env/: 01_basic_env.py  02_mode_specific.py  03_snapshots.py  04_advanced.py  README.md
true_storage/demos/storage/: 03_mixed_storage.py  README.md
true_storage/storage/: __init__.py  base.py  cold.py  hot.py  mixed.py
(+3 files in other folders)
