[metadata]
name = true-storage
description = A boilerplate utility package
author = alaamer12
version = 0.1.0
author_email = ahmedmuhmmed239@gmail.com
license = MIT
license_files = LICENSE.md
long_description = A Comprehensive yet simple boilerplate package to solve simple but yet impactful problems
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/alaamer12
project_urls =
    Source = https://github.com/alaamer12/true-storage

platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

python_requires = >=3.7

testing =
    setuptools
    pytest
    pytest-asyncio

[tool:pytest]
norecursedirs =
    dist
    build
testpaths = tests